# ipc

./: .gitignore  CMakeLists.txt  CMakeSettings.json
cmake/: ipcConfig.cmake
include/: common.hpp  ec.hpp  ec.hpp.in  except.hpp  semhdl.hpp  shmhdl.hpp
src/: ec.cxx  except.cxx
src/posix/: semhdl.cxx  shmhdl.cxx
src/win32/: shmhdl.cxx
tests/: Testcase_semhdl.cxx  Testcase_shmhdl.cxx
